src/index.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

:root {
  /* page primary colors */
  --primary-blue: #0755e9;
  --secondary-blue: #5b94ff;
  --primary-black: #141414;
  --primary-white: #ffffff;
  --off-white: #f7f7f7;
  --primary-orange: #ff6016;
  --faint-border: #a4a4a4a4;
  --faq-border: #cac9c9;
  --faq-answer: #898784;
  --testimonial-background: #f1f4f8;
  --gold: #ffc250;
  --light-gray: #949596;

  /* font weights */
  --heading-weight: 400;
  --regular-weight: 300;
  --default-font-family: "Montserrat Alternates";
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: var(--default-font-family);
}

body {
  font-family: var(--default-font-family), -apple-system, BlinkMacSystemFont,
    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
    "Droid Sans", "Helvetica Neue", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

a {
  text-decoration: none;
  color: inherit;
}

button {
  cursor: pointer;
}

button:focus {
  outline: none;
}

input:focus {
  outline: none;
}

textarea:focus {
  outline: none;
}

/* general layout styles */

.app-container {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.header {
  position: fixed;
  width: 95%;
  height: 80px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin: 2rem 2.5rem;
  padding: 1rem;
  justify-self: start;
  background: var(--off-white);
  border-radius: 2rem;
  z-index: 999;
}

.header-logo {
  max-width: 134px;
  height: 55.22px;
}

.nav-container {
  display: flex;
  align-items: center;
  gap: 4rem;
}

.navbar {
  display: flex;
  align-items: center;
  gap: 4rem;
  list-style-type: none;
  font-size: 16px;
}

.navbar li {
  cursor: pointer;
}

.navbar .active::after {
  content: "";
  display: block;
  position: relative;
  top: 0.3rem;
  width: 100%;
  height: 4px;
  background: var(--primary-blue);
}

.main {
  justify-self: center;
  margin-top: 7rem;
}

.footer {
  width: 100%;
  height: 677px;
  background: var(--primary-black);
  justify-self: end;
  display: flex;
  align-items: center;
  justify-content: center;
}

.footer-content-container {
  width: 90%;
  height: 590px;
  border-radius: 51px;
  background: var(--primary-blue);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 4rem;
}

.footer-sub-container {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1.5rem;
}

.footer-hero {
  width: 85%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.footer-hero-texts {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}

.footer-hero-texts p {
  font-size: 100.43px;
  font-weight: 400;
  line-height: 106.7px;
  letter-spacing: -2.5%;
  color: var(--primary-white);
}

.social-icons {
  display: flex;
  flex-direction: column;
  list-style-type: none;
  gap: 1rem;
}

.social-icons li {
  color: var(--primary-white);
  font-size: 30px;
}

.footer-nav {
  width: 85%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.footer-logo {
  width: 134px;
  height: 55.22px;
}

.footer-nav-list {
  display: flex;
  align-items: centerr;
  gap: 1rem;
  list-style-type: none;
  color: var(--primary-white);
  font-size: 13px;
}

.footer-content-container hr {
  width: 85%;
  height: 0.6px;
  background: var(--primary-white);
}

.copyright-text {
  font-size: 14px;
  color: var(--primary-white);
}

/* HOME PAGE STYLES */
.page-container {
  margin-top: 3rem;
  margin-bottom: 2rem;
}

.hero-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 3rem;
  text-align: center;
}

.hero-heading {
  font-size: 96px;
  line-height: 99%;
  width: 954px;
}

.hero-text {
  font-size: 18px;
  font-weight: 300;
  line-height: 143%;
  width: 731px;
}

.hero-image-container {
  display: flex;
  flex-direction: column;
}

.hero-img-circle {
  position: relative;
  top: 3rem;
  right: 7rem;
  align-self: end;
}

.hero-image {
  width: 1229.99px;
  height: 588.18px;
}

.know-more-section {
  width: 1237px;
  height: 565px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 3rem;
  padding: 0 2.5rem;
  background: var(--off-white);
  border-radius: 33px;
}

.know-more-content {
  display: flex;
  justify-content: center;
  align-items: space-between;
}

.know-more-heading {
  font-size: 80px;
  line-height: 86px;
  font-weight: 400;
  width: 973px;
  height: 258px;
  align-self: start;
  text-align: left;
}

.know-more-content {
  align-self: start;
  gap: 10rem;
}

.know-more-text {
  width: 675px;
  height: 111px;
  text-align: left;
  font-size: 20px;
  line-height: 186%;
}

.service-container {
  padding: 0 2rem;
  background: var(--primary-black);
}

.service-section {
  width: 98%;
  height: 530px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 4rem;
  color: var(--primary-white);
}

.service-descriptions {
  width: 100%;
  display: flex;
  /* margin: 0 2rem; */
  justify-content: space-between;
  align-items: center;
  font-weight: 300;
}

.service-heading {
  width: 477px;
  height: 112px;
  font-size: 56.28px;
  line-height: 99%;
  font-weight: 400;
}

.service-text {
  width: 308px;
  height: 96px;
  font-size: 14px;
  line-height: 173%;
}

.service-list {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  gap: 1rem;
}

.service {
  border: solid 1px var(--primary-white);
  font-size: 29.41px;
  font-weight: 300;
  line-height: 100%;
  letter-spacing: 1%;
  border-radius: 49.62px;
  padding: 1.5rem 2rem;
}
/* ... */

